--- a/src/examples/theme-index-with-asides.html
+++ b/src/examples/theme-index-with-asides.html
@@ -43,8 +43,11 @@
 
 <!--#include virtual="/assets/includes/global/page-options-pre.html"-->
 <!-- grid for index pages - 1 column -->
+					<div class="list-sm-indent">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
 					<div id="qg-index-links" class="clearfix">
-						<div class="col-sm-12 col-md-12 col-lg-12">
+						<div>
 							<h2>
 								Heading 
 							</h2>
@@ -53,7 +56,7 @@
 								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
 							</p>
 						</div>
-						<div class="col-sm-12 col-md-12 col-lg-12">
+						<div>
 							<h2>
 								Heading 
 							</h2>
@@ -66,7 +69,7 @@
 								<li>Link text here</li>
 							</ul>
 						</div>
-						<div class="col-sm-12 col-md-12 col-lg-12">
+						<div>
 							<h2>
 								Heading 
 							</h2>
@@ -75,7 +78,7 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 							</p>
 						</div>
-						<div class="col-sm-12 col-md-12 col-lg-12">
+						<div>
 							<h2>
 								Heading 
 							</h2>
